--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,67 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background: #f6f7f9;
+}
+
+#header {
+    width: 100vw;
+    height: 27vh;
+    background: white;
+    border-top: 5px solid #e03134;
+}
+
+#title-and-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title {
+    font-size: 65px;
+    font-style: italic;
+}
+
+nav {
+    width: 80vw;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-top: 2px solid #f5f5f7;
+    border-bottom: 2px solid #f5f5f7;
+    height: 8vh;
+    margin-top: 10px;
+}
+
+nav > ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+.nav-links {
+    height: 7.8vh;
+    width: 26vw;
+    text-decoration: none;
+    color: #808080;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 1s;
+}
+
+.nav-links:hover {
+    color: black;
+}
+
+.current {
+    border-top: 2px solid #e03134;
+    color: black;
+}
+
+.current:hover {
+    font-style: bold;
 }
